--- a/appstate.json
+++ b/appstate.json
@@ -1,12 +1,12 @@
 [
     {
         "key": "dbln",
-        "value": "%7B%2261566548371663%22%3A%22FksBrKtQ%22%2C%2261568751681209%22%3A%224jnfV6Ri%22%2C%22100049235086690%22%3A%22qVrEZt8l%22%7D",
+        "value": "%7B%2261566548371663%22%3A%22FksBrKtQ%22%2C%2261568751681209%22%3A%224jnfV6Ri%22%7D",
         "domain": "facebook.com",
         "path": "/login/device-based/",
         "hostOnly": false,
-        "creation": "2025-03-11T18:31:13.954Z",
-        "lastAccessed": "2025-03-11T18:31:13.954Z"
+        "creation": "2025-03-12T11:29:21.441Z",
+        "lastAccessed": "2025-03-12T11:29:21.441Z"
     },
     {
         "key": "sb",
@@ -14,8 +14,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-03-11T18:31:13.954Z",
-        "lastAccessed": "2025-03-11T18:31:13.954Z"
+        "creation": "2025-03-12T11:29:21.441Z",
+        "lastAccessed": "2025-03-12T11:29:21.441Z"
     },
     {
         "key": "datr",
@@ -23,8 +23,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-03-11T18:31:13.954Z",
-        "lastAccessed": "2025-03-11T18:31:13.954Z"
+        "creation": "2025-03-12T11:29:21.441Z",
+        "lastAccessed": "2025-03-12T11:29:21.441Z"
     },
     {
         "key": "ps_l",
@@ -32,8 +32,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-03-11T18:31:13.954Z",
-        "lastAccessed": "2025-03-11T18:31:13.954Z"
+        "creation": "2025-03-12T11:29:21.441Z",
+        "lastAccessed": "2025-03-12T11:29:21.441Z"
     },
     {
         "key": "ps_n",
@@ -41,8 +41,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-03-11T18:31:13.954Z",
-        "lastAccessed": "2025-03-11T18:31:13.954Z"
+        "creation": "2025-03-12T11:29:21.441Z",
+        "lastAccessed": "2025-03-12T11:29:21.441Z"
     },
     {
         "key": "locale",
@@ -50,8 +50,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-03-11T18:31:13.954Z",
-        "lastAccessed": "2025-03-11T18:31:13.954Z"
+        "creation": "2025-03-12T11:29:21.441Z",
+        "lastAccessed": "2025-03-12T11:29:21.441Z"
     },
     {
         "key": "vpd",
@@ -59,8 +59,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-03-11T18:31:13.954Z",
-        "lastAccessed": "2025-03-11T18:31:13.954Z"
+        "creation": "2025-03-12T11:29:21.441Z",
+        "lastAccessed": "2025-03-12T11:29:21.441Z"
     },
     {
         "key": "m_pixel_ratio",
@@ -68,8 +68,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-03-11T18:31:13.954Z",
-        "lastAccessed": "2025-03-11T18:31:13.954Z"
+        "creation": "2025-03-12T11:29:21.441Z",
+        "lastAccessed": "2025-03-12T11:29:21.441Z"
     },
     {
         "key": "wd",
@@ -77,52 +77,61 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-03-11T18:31:13.954Z",
-        "lastAccessed": "2025-03-11T18:31:13.954Z"
+        "creation": "2025-03-12T11:29:21.441Z",
+        "lastAccessed": "2025-03-12T11:29:21.441Z"
     },
     {
         "key": "c_user",
-        "value": "61557575643797",
+        "value": "100049235086690",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-03-11T18:31:13.954Z",
-        "lastAccessed": "2025-03-11T18:31:13.954Z"
+        "creation": "2025-03-12T11:29:21.441Z",
+        "lastAccessed": "2025-03-12T11:29:21.441Z"
     },
     {
         "key": "fr",
-        "value": "0Ce5OZhMDKmMWCT3i.AWXRr7dqwT7kdEJV0Qeiv0X6-T-qaigrN_Otcw.BnU2fO..AAA.0.0.Bn0IFi.AWWAZ5uc8Lw",
+        "value": "0Ce5OZhMDKmMWCT3i.AWVoTVN9YthEpdfbs0QU0TlyhEtYR9vjO0l64w.BnU2fO..AAA.0.0.Bn0WnV.AWXD2HkzyeI",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-03-11T18:31:13.954Z",
-        "lastAccessed": "2025-03-11T18:31:13.954Z"
+        "creation": "2025-03-12T11:29:21.441Z",
+        "lastAccessed": "2025-03-12T11:29:21.441Z"
     },
     {
         "key": "xs",
-        "value": "21%3ApWGuQ9BpbMfTcw%3A2%3A1741717859%3A-1%3A5903",
+        "value": "12%3Av_hiJ71nm3NBJQ%3A2%3A1741777366%3A-1%3A5903",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-03-11T18:31:13.954Z",
-        "lastAccessed": "2025-03-11T18:31:13.954Z"
+        "creation": "2025-03-12T11:29:21.441Z",
+        "lastAccessed": "2025-03-12T11:29:21.441Z"
+    },
+    {
+        "key": "dpr",
+        "value": "2.8125",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-03-12T11:29:21.441Z",
+        "lastAccessed": "2025-03-12T11:29:21.441Z"
     },
     {
         "key": "fbl_st",
-        "value": "100734226%3BT%3A29028631",
+        "value": "101022433%3BT%3A29029649",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-03-11T18:31:13.954Z",
-        "lastAccessed": "2025-03-11T18:31:13.954Z"
+        "creation": "2025-03-12T11:29:21.441Z",
+        "lastAccessed": "2025-03-12T11:29:21.441Z"
     },
     {
         "key": "wl_cbv",
-        "value": "v2%3Bclient_version%3A2762%3Btimestamp%3A1741717863%3BCRCM%3A-250342853",
+        "value": "v2%3Bclient_version%3A2762%3Btimestamp%3A1741778949",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-03-11T18:31:13.954Z",
-        "lastAccessed": "2025-03-11T18:31:13.954Z"
+        "creation": "2025-03-12T11:29:21.441Z",
+        "lastAccessed": "2025-03-12T11:29:21.441Z"
     }
 ]
