--- a/appstate.json
+++ b/appstate.json
@@ -5,8 +5,8 @@
         "domain": "facebook.com",
         "path": "/login/device-based/",
         "hostOnly": false,
-        "creation": "2025-06-10T16:58:49.644Z",
-        "lastAccessed": "2025-06-10T16:58:49.644Z"
+        "creation": "2025-06-10T18:55:48.564Z",
+        "lastAccessed": "2025-06-10T18:55:48.564Z"
     },
     {
         "key": "datr",
@@ -14,8 +14,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-06-10T16:58:49.644Z",
-        "lastAccessed": "2025-06-10T16:58:49.644Z"
+        "creation": "2025-06-10T18:55:48.564Z",
+        "lastAccessed": "2025-06-10T18:55:48.564Z"
     },
     {
         "key": "sb",
@@ -23,8 +23,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-06-10T16:58:49.644Z",
-        "lastAccessed": "2025-06-10T16:58:49.644Z"
+        "creation": "2025-06-10T18:55:48.564Z",
+        "lastAccessed": "2025-06-10T18:55:48.564Z"
     },
     {
         "key": "vpd",
@@ -32,8 +32,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-06-10T16:58:49.644Z",
-        "lastAccessed": "2025-06-10T16:58:49.644Z"
+        "creation": "2025-06-10T18:55:48.564Z",
+        "lastAccessed": "2025-06-10T18:55:48.564Z"
     },
     {
         "key": "ps_l",
@@ -41,8 +41,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-06-10T16:58:49.645Z",
-        "lastAccessed": "2025-06-10T16:58:49.645Z"
+        "creation": "2025-06-10T18:55:48.564Z",
+        "lastAccessed": "2025-06-10T18:55:48.564Z"
     },
     {
         "key": "ps_n",
@@ -50,8 +50,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-06-10T16:58:49.645Z",
-        "lastAccessed": "2025-06-10T16:58:49.645Z"
+        "creation": "2025-06-10T18:55:48.564Z",
+        "lastAccessed": "2025-06-10T18:55:48.564Z"
     },
     {
         "key": "c_user",
@@ -59,8 +59,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-06-10T16:58:49.645Z",
-        "lastAccessed": "2025-06-10T16:58:49.645Z"
+        "creation": "2025-06-10T18:55:48.564Z",
+        "lastAccessed": "2025-06-10T18:55:48.564Z"
     },
     {
         "key": "xs",
@@ -68,8 +68,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-06-10T16:58:49.645Z",
-        "lastAccessed": "2025-06-10T16:58:49.645Z"
+        "creation": "2025-06-10T18:55:48.564Z",
+        "lastAccessed": "2025-06-10T18:55:48.564Z"
     },
     {
         "key": "locale",
@@ -77,8 +77,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-06-10T16:58:49.645Z",
-        "lastAccessed": "2025-06-10T16:58:49.645Z"
+        "creation": "2025-06-10T18:55:48.564Z",
+        "lastAccessed": "2025-06-10T18:55:48.564Z"
     },
     {
         "key": "dpr",
@@ -86,61 +86,34 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-06-10T16:58:49.645Z",
-        "lastAccessed": "2025-06-10T16:58:49.645Z"
-    },
-    {
-        "key": "m_pixel_ratio",
-        "value": "2.8125",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2025-06-10T16:58:49.645Z",
-        "lastAccessed": "2025-06-10T16:58:49.645Z"
-    },
-    {
-        "key": "wd",
-        "value": "384x832",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2025-06-10T16:58:49.645Z",
-        "lastAccessed": "2025-06-10T16:58:49.645Z"
-    },
-    {
-        "key": "x-referer",
-        "value": "eyJyIjoiLyIsImgiOiIvIiwicyI6Im0ifQ%3D%3D",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2025-06-10T16:58:49.645Z",
-        "lastAccessed": "2025-06-10T16:58:49.645Z"
+        "creation": "2025-06-10T18:55:48.564Z",
+        "lastAccessed": "2025-06-10T18:55:48.564Z"
     },
     {
         "key": "fr",
-        "value": "0MmXGi5OoGPsKoWdq.AWfMf-m5t3OP8hpAgtlPL7X0BDwq_iHIJnR_ksTVv5AAk6FJRMo.Bn_fCK..AAA.0.0.BoSGRD.AWd6SsSRrmsAoDXfRHVS0MsQ0Oc",
+        "value": "0MmXGi5OoGPsKoWdq.AWeB442qJsAhyIFcNXLT3jgmGN6ka1XDaGIsgqO45yZV4oXinyc.Bn_fCK..AAA.0.0.BoSH-j.AWcdaxruvDKxyGeUlKMtz0lJC7I",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-06-10T16:58:49.645Z",
-        "lastAccessed": "2025-06-10T16:58:49.645Z"
+        "creation": "2025-06-10T18:55:48.564Z",
+        "lastAccessed": "2025-06-10T18:55:48.564Z"
     },
     {
         "key": "fbl_st",
-        "value": "101521858%3BT%3A29159578",
+        "value": "101520457%3BT%3A29159695",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-06-10T16:58:49.645Z",
-        "lastAccessed": "2025-06-10T16:58:49.645Z"
+        "creation": "2025-06-10T18:55:48.564Z",
+        "lastAccessed": "2025-06-10T18:55:48.564Z"
     },
     {
         "key": "wl_cbv",
-        "value": "v2%3Bclient_version%3A2841%3Btimestamp%3A1749574723",
+        "value": "v2%3Bclient_version%3A2842%3Btimestamp%3A1749581732",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-06-10T16:58:49.645Z",
-        "lastAccessed": "2025-06-10T16:58:49.645Z"
+        "creation": "2025-06-10T18:55:48.564Z",
+        "lastAccessed": "2025-06-10T18:55:48.564Z"
     }
 ]
