--- a/appstate.json
+++ b/appstate.json
@@ -1,12 +1,12 @@
 [
     {
         "key": "dbln",
-        "value": "%7B%2261575296005618%22%3A%22S0Tquyph%22%2C%2261575505431044%22%3A%22wT2FR8z8%22%2C%2261575300662779%22%3A%22NaBrOmzf%22%2C%2261575070664257%22%3A%22BAe3rsmF%22%7D",
+        "value": "%7B%2261575296005618%22%3A%22S0Tquyph%22%2C%2261575505431044%22%3A%22wT2FR8z8%22%2C%2261575300662779%22%3A%22I4d9grYG%22%7D",
         "domain": "facebook.com",
         "path": "/login/device-based/",
         "hostOnly": false,
-        "creation": "2025-06-26T16:14:48.102Z",
-        "lastAccessed": "2025-06-26T16:14:48.102Z"
+        "creation": "2025-06-28T09:02:29.611Z",
+        "lastAccessed": "2025-06-28T09:02:29.611Z"
     },
     {
         "key": "datr",
@@ -14,8 +14,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-06-26T16:14:48.102Z",
-        "lastAccessed": "2025-06-26T16:14:48.102Z"
+        "creation": "2025-06-28T09:02:29.611Z",
+        "lastAccessed": "2025-06-28T09:02:29.611Z"
     },
     {
         "key": "sb",
@@ -23,8 +23,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-06-26T16:14:48.102Z",
-        "lastAccessed": "2025-06-26T16:14:48.102Z"
+        "creation": "2025-06-28T09:02:29.611Z",
+        "lastAccessed": "2025-06-28T09:02:29.611Z"
     },
     {
         "key": "vpd",
@@ -32,8 +32,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-06-26T16:14:48.102Z",
-        "lastAccessed": "2025-06-26T16:14:48.102Z"
+        "creation": "2025-06-28T09:02:29.611Z",
+        "lastAccessed": "2025-06-28T09:02:29.611Z"
     },
     {
         "key": "ps_l",
@@ -41,8 +41,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-06-26T16:14:48.102Z",
-        "lastAccessed": "2025-06-26T16:14:48.102Z"
+        "creation": "2025-06-28T09:02:29.611Z",
+        "lastAccessed": "2025-06-28T09:02:29.611Z"
     },
     {
         "key": "ps_n",
@@ -50,53 +50,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-06-26T16:14:48.102Z",
-        "lastAccessed": "2025-06-26T16:14:48.102Z"
-    },
-    {
-        "key": "c_user",
-        "value": "61575070664257",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2025-06-26T16:14:48.102Z",
-        "lastAccessed": "2025-06-26T16:14:48.102Z"
-    },
-    {
-        "key": "xs",
-        "value": "13%3A5WFgWKxBqYmHCg%3A2%3A1749405344%3A-1%3A-1",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2025-06-26T16:14:48.102Z",
-        "lastAccessed": "2025-06-26T16:14:48.102Z"
-    },
-    {
-        "key": "m_pixel_ratio",
-        "value": "2.8125",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2025-06-26T16:14:48.102Z",
-        "lastAccessed": "2025-06-26T16:14:48.102Z"
-    },
-    {
-        "key": "wd",
-        "value": "384x832",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2025-06-26T16:14:48.102Z",
-        "lastAccessed": "2025-06-26T16:14:48.102Z"
-    },
-    {
-        "key": "fr",
-        "value": "0MmXGi5OoGPsKoWdq.AWfvzYDHMVneRhYAZpIttlH_MGYlwB0rT3CQEP3lPcPc2TUQZ1g.Bn_fCK..AAA.0.0.BoXXHm.AWfWeDQyeJ_QDptWUlhPF1smCtk",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2025-06-26T16:14:48.102Z",
-        "lastAccessed": "2025-06-26T16:14:48.102Z"
+        "creation": "2025-06-28T09:02:29.611Z",
+        "lastAccessed": "2025-06-28T09:02:29.611Z"
     },
     {
         "key": "locale",
@@ -104,25 +59,70 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-06-26T16:14:48.102Z",
-        "lastAccessed": "2025-06-26T16:14:48.102Z"
+        "creation": "2025-06-28T09:02:29.611Z",
+        "lastAccessed": "2025-06-28T09:02:29.611Z"
+    },
+    {
+        "key": "m_pixel_ratio",
+        "value": "2.8125",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-06-28T09:02:29.611Z",
+        "lastAccessed": "2025-06-28T09:02:29.611Z"
+    },
+    {
+        "key": "wd",
+        "value": "384x832",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-06-28T09:02:29.611Z",
+        "lastAccessed": "2025-06-28T09:02:29.611Z"
+    },
+    {
+        "key": "c_user",
+        "value": "61575070664257",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-06-28T09:02:29.611Z",
+        "lastAccessed": "2025-06-28T09:02:29.611Z"
+    },
+    {
+        "key": "xs",
+        "value": "29%3AYL8m3cY277_Ofw%3A2%3A1751101317%3A-1%3A-1",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-06-28T09:02:29.611Z",
+        "lastAccessed": "2025-06-28T09:02:29.611Z"
+    },
+    {
+        "key": "fr",
+        "value": "0MmXGi5OoGPsKoWdq.AWf4SV1zc5U0ReoViqseHRHb-iCUDbul5oFN1CMElVS4AK1zNeM.Bn_fCK..AAA.0.0.BoX6-H.AWdMF8vf-O0RYI9U0_hZIuGKiVw",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-06-28T09:02:29.611Z",
+        "lastAccessed": "2025-06-28T09:02:29.611Z"
     },
     {
         "key": "fbl_st",
-        "value": "101039046%3BT%3A29182574",
+        "value": "101021508%3BT%3A29185022",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-06-26T16:14:48.102Z",
-        "lastAccessed": "2025-06-26T16:14:48.102Z"
+        "creation": "2025-06-28T09:02:29.611Z",
+        "lastAccessed": "2025-06-28T09:02:29.611Z"
     },
     {
         "key": "wl_cbv",
-        "value": "v2%3Bclient_version%3A2854%3Btimestamp%3A1750954470",
+        "value": "v2%3Bclient_version%3A2856%3Btimestamp%3A1751101319",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-06-26T16:14:48.102Z",
-        "lastAccessed": "2025-06-26T16:14:48.102Z"
+        "creation": "2025-06-28T09:02:29.611Z",
+        "lastAccessed": "2025-06-28T09:02:29.611Z"
     }
 ]
